--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,18 @@
 !ENCG/*
 
 # Images
+!Battle.png_
+!calendar_item.png_
+!eroStatus.png_
+!menu2.png_
+!ninshin.png_
+!result.png_
+!status_item.png_
+!d_02.png_
+!d_03.png_
+!f10.png_
+!f2.png_
+!f3.png_
+!f4.png_
+!f5.png_
+!opening_1.png_
